nobodywho/gbnf-macro/gbnf/tests/snapshots/test_gbnf__ast_structure.snap
---
source: gbnf/tests/test_gbnf.rs
expression: grammar
---
GbnfGrammar {
    declarations: [
        GbnfDeclaration {
            name: "greeting",
            expr: Characters(
                "hello",
            ),
        },
    ],
    gbnf_string: "greeting ::= \"hello\"",
    root_name: "greeting",
}
