nobodywho/gbnf-macro/gbnf/tests/snapshots/test_gbnf__grammar_string_output.snap
---
source: gbnf/tests/test_gbnf.rs
expression: grammar
---
GbnfGrammar {
    declarations: [
        GbnfDeclaration {
            name: "root",
            expr: Sequence(
                [
                    Characters(
                        "hello",
                    ),
                    Characters(
                        " ",
                    ),
                    Characters(
                        "world",
                    ),
                ],
            ),
        },
    ],
    gbnf_string: "root ::= \"hello\" \" \" \"world\"",
}
