nobodywho/gbnf-macro/gbnf/tests/snapshots/test_gbnf__quantifiers.snap
---
source: gbnf/tests/test_gbnf.rs
expression: grammar
---
GbnfGrammar {
    declarations: [
        GbnfDeclaration {
            name: "rule",
            expr: Sequence(
                [
                    Quantified {
                        expr: NonTerminal(
                            "foo",
                        ),
                        quantifier: Optional,
                    },
                    Quantified {
                        expr: NonTerminal(
                            "bar",
                        ),
                        quantifier: OneOrMore,
                    },
                    Quantified {
                        expr: NonTerminal(
                            "baz",
                        ),
                        quantifier: ZeroOrMore,
                    },
                ],
            ),
        },
    ],
    gbnf_string: "rule ::= foo? bar+ baz*",
}
