nobodywho/gbnf-macro/gbnf/tests/snapshots/test_gbnf__single_declaration.snap
---
source: gbnf/tests/test_gbnf.rs
expression: grammar
---
GbnfGrammar {
    declarations: [
        GbnfDeclaration {
            name: "single",
            expr: NonTerminal(
                "value",
            ),
        },
    ],
    gbnf_string: "single ::= value",
    root_name: "single",
}
